<resources>
    <string name="app_name">Droidcon Kraków 2015</string>
    <!--MENU-->
    <string name="agenda">Agenda</string>
    <string name="favourites">My schedule</string>

    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="drawer_open">Menu open</string>
    <string name="drawer_close">Menu close</string>
    <string name="day_one">Day 1</string>
    <string name="day_two">Day 2</string>
    <string name="day_three">Day 3</string>
    <string name="loading_error">Please check your internet connection</string>
    <string name="speaker_photo">Speaker photo</string>
    <string name="registration">Registration</string>
    <string name="opening_first_day">Opening first day</string>
    <string name="closing_first_day">Closing first day</string>
    <string name="opening_second_day">Opening second day</string>
    <string name="closing_second_day">Closing second day</string>
    <string name="coffee_break">Coffee break</string>
    <string name="lunch_break">Lunch break</string>
    <string name="session">Click to choose</string>
    <string name="slot_type_icon">Icon of slot type</string>
    <string name="barcamp">Barcamp</string>
    <string name="after_party">After party</string>
    <string name="event_date">4th-6th December 2015</string>
    <string name="event_more_info_title">More information:  </string>
    <string name="event_website_link">droidcon.pl/</string>
    <string name="event_description">Want to hear about latest Android technology and talk to experienced Android expert speakers? Be a part of it! Join second edition of droidcon Kraków!</string>
    <string name="speaker_full_name_format">%1$s %2$s</string>


    <!-- Map and Info-->
    <string name="map_and_info">Map &amp; info</string>

    <string name="map_and_info_venue_title">Venue</string>
    <string name="map_and_info_venue_description">Droidcon is hosted by <b>Q Hotel Kraków</b>. Registration and hot beverages is available on base floor. Both speakers room are on 1st floor.</string>
    <string name="map_and_info_venue_action">Open\nvenue location</string>
    <string name="map_and_info_venue_location">Best Western Q Hotel</string>
    <string name="map_and_info_venue_location_address">ul. Wygrana 6, Kraków</string>

    <string name="map_and_info_party_title">After party</string>
    <string name="map_and_info_party_description">After party is placed just few meters from the venue in <b>Forum Przestrzenie</b>. It starts on Friday at 7pm. Come and drink beer with attendies</string>
    <string name="map_and_info_party_action">Open\nafter party location</string>
    <string name="map_and_info_party_location">Forum Przestrzenie</string>
    <string name="map_and_info_party_location_address">ul. Marii Konopnickiej 28, Kraków</string>

    <string name="map_and_info_hackaton_title">Hackaton</string>
    <string name="map_and_info_hackaton_description">Hackaton is hosted by <b>Base Lab</b>. Come and hack more Android stuff you just learned on the conference</string>
    <string name="map_and_info_hackaton_action">Open\nHackaton Location</string>
    <string name="map_and_info_hackaton_location">Base Lab</string>
    <string name="map_and_info_hackaton_location_address">ul. Wyczółkowskiego 7, Kraków</string>

    <string name="fav_added">Added to schedule</string>
    <string name="fav_removed">Removed from schedule</string>
    <string name="schedule_overlap_title">Warning</string>
    <string name="schedule_overlap_message"><![CDATA[You have already choose <b>%1$s</b> for slot at <b>%2$s</b>. Do you want to replace it with <b>%3$s</b>?]]></string>
    <string name="settings_notify_about_my_sessions">Notify me about selected sessions</string>
    <string name="settings_notify_about_my_sessions_description">Display a notification when selected sessions are about to begin</string>

    <string name="received_session_notification">Session %1$s is about to start!</string>

    <string name="hide">Hide</string>
    <string name="room_1">Room 1</string>
    <string name="room_2">Room 2</string>
    <!-- NOT TRANSLATABLE-->
    <string name="preference_notify_sessions" translatable="false">notify_sessions</string>
</resources>
