<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/aboutContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:padding="@dimen/screen_edge_margin">

        <LinearLayout
            android:id="@+id/event_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/eventName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-light"
                android:padding="@dimen/slot_padding"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/eventDate"
                android:text="@string/event_date"
                style="@style/eventDate" />
        </LinearLayout>

        <ImageView
            android:id="@+id/droidconLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/moreInfoLayout"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/moreInfoLayout"
            android:src="@drawable/droidcon_krakow_logo" />


        <LinearLayout
            android:id="@+id/aboutLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/droidconLogo"
            android:layout_alignLeft="@+id/droidconLogo"
            android:layout_alignStart="@+id/droidconLogo"
            android:orientation="vertical"
            android:textAlignment="center">

            <TextView
                android:id="@+id/aboutTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/about"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/aboutDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/event_description"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/moreInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/aboutLayout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/moreInfoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="0dp"
                android:fontFamily="sans-serif-light"
                android:padding="@dimen/slot_padding"
                android:text="@string/event_more_info_title"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/moreInfoLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="0dp"
                android:autoLink="web"
                android:fontFamily="sans-serif-light"
                android:padding="@dimen/slot_padding"
                android:paddingBottom="40dp"
                android:text="@string/event_website_link"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>